; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-stats.c_dm_stat_in_flight.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-stats.c_dm_stat_in_flight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_stat_shared = type { i32* }

@READ = common dso_local global i64 0, align 8
@WRITE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_stat_shared*)* @dm_stat_in_flight to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dm_stat_in_flight(%struct.dm_stat_shared* %0) #0 {
  %2 = alloca %struct.dm_stat_shared*, align 8
  store %struct.dm_stat_shared* %0, %struct.dm_stat_shared** %2, align 8
  %3 = load %struct.dm_stat_shared*, %struct.dm_stat_shared** %2, align 8
  %4 = getelementptr inbounds %struct.dm_stat_shared, %struct.dm_stat_shared* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = load i64, i64* @READ, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = call i32 @atomic_read(i32* %7)
  %9 = load %struct.dm_stat_shared*, %struct.dm_stat_shared** %2, align 8
  %10 = getelementptr inbounds %struct.dm_stat_shared, %struct.dm_stat_shared* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i64, i64* @WRITE, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = call i32 @atomic_read(i32* %13)
  %15 = add nsw i32 %8, %14
  ret i32 %15
}

declare dso_local i32 @atomic_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
